<resources>
    <string name="app_name">BackFight</string>

    <string name="all_back">Back</string>
    <string name="all_icon">Icon</string>
    <string name="all_sp_name">LOCAL_STORE</string>
    <string name="all_dialogSpectateTitle">Spectate</string>
    <string name="mainMenu_newGame">New Game</string>
    <string name="mainMenu_spectateGame">Spectate Game</string>
    <string name="mainMenu_rules">Rules</string>
    <string name="mainMenu_settings">Settings</string>
    <string name="mainMenu_exit">Exit</string>
    <string name="mainMenu_dialogMessage">What is your profile name?</string>
    <string name="mainMenu_dialogBtnPositive">OK</string>
    <string name="mainMenu_dialogTitle">Profile name</string>
    <string name="mainMenu_dialogSpectateBtnPositive">Spectate game</string>
    <string name="newGame_create">Create</string>
    <string name="newGame_join">Join</string>
    <string name="newGame_dialogTitle">Recent ID\'s used</string>
    <string name="newGame_dialogMessage">Insert host ID</string>
    <string name="newGame_dialogBtnPositive">Join game</string>
    <string name="newGame_dialogBtnNegative">Cancel</string>
    <string name="newGame_dialogErrorMessage">Game Id does not exist</string>
    <string name="newGame_dialogHint">Enter new Id!</string>
    <string name="lobby_startGame">Start Game</string>
    <string name="lobby_title">Lobby</string>
    <string name="lobby_default">Default</string>
    <string name="lobby_maze">Maze</string>
    <string name="rules_search">Search rules</string>
    <string name="rules_rulesDetails">Click on a rule to view the details</string>
    <string name="settings_profileName">Name:</string>
    <string name="settings_hint">Put in your name here</string>
    <string name="settings_avatarImg">Avatar Image:</string>
    <string name="settings_clickOnImg">Click on the image to change</string>
    <string name="settings_save">Save</string>
    <string name="settings_invalidProfileName">Invalid profile name </string>

    <string name="EXTRA_PLAYERLIST">com.jarn.extra.playerlist</string>
    <string name="EXTRA_UUID">com.jarn.extra.uuid</string>
    <string name="EXTRA_HOST">com.jarn.extra.host</string>
    <string name="EXTRA_GRIDTYPE">com.jarn.extra.gridtype</string>
    <string name="EXTRA_GRIDSIZE">com.jarn.extra.gridsize</string>
    <string name="EXTRA_SPECTATE">com.jarn.extra.spectate</string>


    <!-- Items -->
    <string name="item_sword_simple_title">Simple Sword</string>
    <string name="item_sword_simple_description">It\'s not much, but just hit with the pointy end.</string>
    <string name="item_sword_dual_title">Dual Swords</string>
    <string name="item_sword_dual_description">The more the merrier!</string>
    <string name="item_sword_scimitar_title">Merchant Scimitar</string>
    <string name="item_sword_scimitar_description">Stolen from some guy.. Now I just need to steal his camel</string>
    <string name="item_sword_magical_title">Al Samirs Sword</string>
    <string name="item_sword_magical_description">The Sword of Al Samir is forged in the elver castle. It possess\' some fragments from the mightly dragon Phlamir.</string>
    <string name="item_scepter_title">Scepter</string>
    <string name="item_scepter_description">It might be royal, but it won\'t help you now</string>
    <string name="item_axe_title">Battle Axe</string>
    <string name="item_axe_description">No tree nor monster can stop you now.</string>
    <string name="item_axe_major_title">Battle Axe Of Lionheart</string>
    <string name="item_axe_major_description">This axe was used in the Battle of Jaffa by Lionheart himself.</string>
    <string name="item_sword_flame_title">Drakur\'s flaming sword</string>
    <string name="item_sword_flame_description">Legends tell what this sword can do.</string>

    <!-- Monsters -->
    <string name="monster_zombie_name">Zombie</string>
    <string name="monster_zombie_description">Once was a great knight, but not so much anymore.</string>
    <string name="monster_undead_name">Undead</string>
    <string name="monster_undead_description">Rose from the dead and still as stupid.</string>
    <string name="monster_muler_name">Muler</string>
    <string name="monster_muler_description">Once was a dance master, try to beat it with your moves.</string>
    <string name="monster_tauler_name">Tauler</string>
    <string name="monster_tauler_description">It\'s not sparkling, but it\'s still a vampire.</string>
    <string name="monster_mauler_name">Mauler</string>
    <string name="monster_mauler_description">It\'s teeth is as sharp as a carrot, but be careful of the claws.</string>
    <string name="monster_hiss_name">Hiss</string>
    <string name="monster_hiss_description">This little devil has wings, you better run.</string>
    <string name="monster_ghostHorse_name">Ghost horse</string>
    <string name="monster_ghostHorse_description">You can try to ride it, but you will end up on the floor on your butt.</string>
    <string name="monster_threeHeaded_name">3 Headed</string>
    <string name="monster_threeHeaded_description">You think 2 heads is a lot to handle, try to imagine 3 heads.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_actionCount">Action count left:</string>
    <string name="game_roundCounter">Round count:</string>
    <string name="dmg">Dmg</string>
    <string name="hp">Hp</string>
    <string name="name">Name</string>
    <string name="fragment_item_details_title">Title</string>
    <string name="fragment_item_details_description">Description</string>
    <string name="fragment_item_details_stats">Stats</string>

    <string name="internetErrorMessage">You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="internetErrorTitle">Unable to connect</string>
    <string name="internetErrorSettings">Settings</string>
    <string name="internetErrorCancel">Cancel</string>
    <string name="monster">Monster</string>
    <string name="monster_turn">Monster turn</string>
    <string name="newRound">New round</string>
    <string name="newRoundStarted">A new round has started remeber to take your turn</string>


</resources>
