<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grid_background"
    tools:context="com.studio.jarn.backfight.Settings_Activity.SettingsActivity">

    <Button
        android:id="@+id/activity_settings_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/btn_BackgroundColor"
        android:text="@string/all_back"
        android:textColor="@color/btn_TextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/activity_settings_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/btn_BackgroundColor"
        android:text="@string/settings_save"
        android:textColor="@color/btn_TextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/activity_settings_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainMenu_settings"
        android:textColor="@color/btn_TextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_settings_gl_horizotalTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/activity_settings_gl_horizotalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1511254"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="47dp" />

    <EditText
        android:id="@+id/activity_settings_et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/settings_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:textColor="@color/btn_TextColor"
        android:textColorHint="@color/btn_TextColorHint"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toRightOf="@+id/activity_settings_tv_name"
        app:layout_constraintRight_toLeftOf="@+id/activity_settings_gl_vertical50"
        app:layout_constraintTop_toTopOf="@+id/activity_settings_gl_horizotalTitle" />

    <TextView
        android:id="@+id/activity_settings_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_profileName"
        android:textColor="@color/btn_TextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_settings_gl_horizotalTitle" />

    <android.support.constraint.Guideline
        android:id="@+id/activity_settings_gl_vertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/activity_settings_tv_AvatarImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:text="@string/settings_avatarImg"
        android:textColor="@color/btn_TextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_et_name" />

    <android.support.v4.view.ViewPager
        android:id="@+id/activity_settings_vp_image"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/activity_settings_tv_AvatarImg"
        app:layout_constraintRight_toLeftOf="@+id/activity_settings_gl_vertical50"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_et_name">

    </android.support.v4.view.ViewPager>

</android.support.constraint.ConstraintLayout>